# yolov9001

./: .gitignore  .style.yapf  9001.py  README.md  cuda-installer.sh  init.sh  mktar.py  pyproject.toml  pytest.ini  requirements.txt  yolov9001
core/: __init__.py  base.py  benchmark.py  callbacks.py  config.py  detector.py  exporter.py  runtime.py  trainer.py  validator.py
models/detect/: detect.py
models/detect/9001/: layers.py  model.py  model.yaml
models/detect/hyper/: layers.py  model.py  model.yaml
models/hyps/: high.yaml  low.yaml  medium.yaml
scripts/: get_coco.sh
terraform/: find_instance.py  main.tf  nginx.conf  outputs.tf  prepdeps.sh  prepml.sh
terraform/terraform-aws-ec2-instance-group/: main.tf  outputs.tf
tests/: config.py  conftest.py  test_assigner.py  test_augment_keep_masks.py  test_data.py  test_dataloader_atomic.py  test_detector.py  test_ema.py  test_geometry.py  test_letterbox.py  test_loss.py  test_metrics.py  test_model.py  test_mosaic_and_augment.py  test_optimizer.py  test_pipelines.py  test_postprocess.py  test_trainer.py  test_utils.py  test_val_logging_and_metrics.py  test_validator.py
toolchain/: benchmarks.py  compare.py  detect.py  export.py  onnx-util.py  train.py  train2.py  val.py
toolchain/data/: coco.yaml
toolchain/data/hyps/: hyp.finetune-coco-qat.yaml  hyp.finetune-coco.yaml  hyp.scratch-high.yaml  hyp.scratch-low.yaml
toolchain/models/: common.py  experimental.py  yolo.py
toolchain/models/detect/: yolov9001-np.yaml
toolchain/tools/: reparam.py
toolchain/utils/: __init__.py  activations.py  augmentations.py  autobatch.py  callbacks.py  coco_utils.py  dataloaders.py  downloads.py  general.py  lion.py  loss_tal.py  metrics.py  plots.py  torch_utils.py
toolchain/utils/loggers/: __init__.py
toolchain/utils/loggers/clearml/: clearml_utils.py  hpo.py
toolchain/utils/loggers/comet/: __init__.py  comet_utils.py  hpo.py
toolchain/utils/loggers/wandb/: log_dataset.py  sweep.py  sweep.yaml  wandb_utils.py
toolchain/utils/tal/: anchor_generator.py  assigner.py
tools/: add_path_to_files.py  ai-review.py  classfinder.py  dump_config.py  trace.py  validate_augmentations.py
utils/: assigner.py  augment.py  box_iou.py  boxes.py  compute.py  dataloaders.py  dino_teacher.py  ema.py  geometry.py  helpers.py  logging.py  loss.py  metrics.py  optimizer.py  paths.py  postprocess.py  prefetcher.py
